src/test/ui/rfc1598-generic-associated-types/parameter_number_and_kind.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/parameter_number_and_kind.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:17:27
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                           ^^^^^^^ lifetime argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:17:36
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                                    ^ type argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:20:26
   |
LL |     type FErr1 = Self::E<'static, 'static>; // Error
   |                          ^^^^^^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:22:29
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                             ^^^^^^^ lifetime argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:22:38
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                                      ^ type argument not allowed

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0109`.
